ufw/user6.rules
*filter
:ufw6-user-input - [0:0]
:ufw6-user-output - [0:0]
:ufw6-user-forward - [0:0]
:ufw6-before-logging-input - [0:0]
:ufw6-before-logging-output - [0:0]
:ufw6-before-logging-forward - [0:0]
:ufw6-user-logging-input - [0:0]
:ufw6-user-logging-output - [0:0]
:ufw6-user-logging-forward - [0:0]
:ufw6-after-logging-input - [0:0]
:ufw6-after-logging-output - [0:0]
:ufw6-after-logging-forward - [0:0]
:ufw6-logging-deny - [0:0]
:ufw6-logging-allow - [0:0]
:ufw6-user-limit - [0:0]
:ufw6-user-limit-accept - [0:0]
### RULES ###

### tuple ### allow udp 51820 ::/0 any ::/0 in comment=416c6c6f77205769726547756172642056504e
-A ufw6-user-input -p udp --dport 51820 -j ACCEPT

### tuple ### allow tcp 22 ::/0 any ::/0 in comment=416c6c6f772053534820616363657373
-A ufw6-user-input -p tcp --dport 22 -j ACCEPT

### tuple ### allow tcp 80 ::/0 any ::/0 in comment=416c6c6f7720485454502028436164647929
-A ufw6-user-input -p tcp --dport 80 -j ACCEPT

### tuple ### allow tcp 443 ::/0 any ::/0 in comment=416c6c6f772048545450532028436164647929
-A ufw6-user-input -p tcp --dport 443 -j ACCEPT

### tuple ### allow tcp 3000 ::/0 any ::/0 in comment=466f7267656a6f
-A ufw6-user-input -p tcp --dport 3000 -j ACCEPT

### tuple ### allow tcp 222 ::/0 any ::/0 in comment=466f7267656a6f20535348
-A ufw6-user-input -p tcp --dport 222 -j ACCEPT

### tuple ### allow tcp 51819 ::/0 any ::/0 in
-A ufw6-user-input -p tcp --dport 51819 -j ACCEPT

### tuple ### allow tcp 21115 ::/0 any ::/0 in
-A ufw6-user-input -p tcp --dport 21115 -j ACCEPT

### tuple ### allow tcp 21116 ::/0 any ::/0 in
-A ufw6-user-input -p tcp --dport 21116 -j ACCEPT

### tuple ### allow udp 21116 ::/0 any ::/0 in
-A ufw6-user-input -p udp --dport 21116 -j ACCEPT

### tuple ### allow tcp 21117 ::/0 any ::/0 in
-A ufw6-user-input -p tcp --dport 21117 -j ACCEPT

### END RULES ###

### LOGGING ###
-A ufw6-after-logging-input -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-I ufw6-logging-deny -m conntrack --ctstate INVALID -j RETURN -m limit --limit 3/min --limit-burst 10
-A ufw6-logging-deny -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-A ufw6-logging-allow -j LOG --log-prefix "[UFW ALLOW] " -m limit --limit 3/min --limit-burst 10
### END LOGGING ###

### RATE LIMITING ###
-A ufw6-user-limit -m limit --limit 3/minute -j LOG --log-prefix "[UFW LIMIT BLOCK] "
-A ufw6-user-limit -j REJECT
-A ufw6-user-limit-accept -j ACCEPT
### END RATE LIMITING ###
COMMIT
